# pygobject

./: .clang-format  .coveragerc  .cvsignore  .flake8  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  COPYING  ChangeLog  ChangeLog.pre-2.18  ChangeLog.pre-3-0  HACKING  MAINTAINERS  MANIFEST.in  METADATA.in  Makefile.am  NEWS  PKG-INFO.in  README  README.rst  README.win32  autogen.sh  configure.ac  dsextras.py  gobject-linter.toml  goblint.toml  ltihooks.py  meson.build  meson_options.txt  org.gnome.PyGObject.Devel.json  org.gnome.pygobject.appwindow.json  pre-commit.hook  pygi-Makefile.am  pygi-configure.ac  pygi-convert.sh  pygi.doap  (+11 more)
codegen/: .gitignore  Makefile.am  argtypes.py  code-coverage.py  codegen.py  definitions.py  defsconvert.py  defsgen.py  defsparser.py  docextract.py  docextract_to_xml.py  docgen.py  h2def.py  override.py  pygtk-codegen-2.0.in  scmexpr.py
codegen/libcodegen/: Makefile.am  argtypes.py  codegen.py  definitions.py  defsparser.py  docextract.py  override.py  reversewrapper.py  scmexpr.py
docs/: .cvsignore  .gitignore  Makefile  Makefile.am  bugs_repo.rst  changelog.rst  conf.py  contact.rst  extra.css  further.rst  getting_started.rst  html.xsl  icons.rst  index.rst  maintguide.rst  packagingguide.rst  ref-html-style.xsl  requirements.txt
docs/_templates/: page.html
docs/devguide/: building_testing.rst  dev_environ.rst  gbytes_marshaller_tutorial.rst  index.rst  initializer_deprecations.rst  introspection_porting.rst  maintguide.rst  override_guidelines.rst  overview.rst  profiling.rst  style_guide.rst
docs/guide/: async_counter.py  asynchronous.rst  cairo_integration.rst  debug_profile.rst  deploy.rst  download_asyncio.py  download_callback.py  faq.rst  flatpak.rst  flatpaking.rst  gtk_template.rst  imports.rst  index.rst  porting.rst  sysdeps.rst  testing.rst  threading.rst
docs/images/: LICENSE  overview.dia
docs/news/: pygobject-3-56.rst
docs/reference/: .cvsignore  ChangeLog  entities.docbook.in  pygio-appinfo.xml  pygio-applaunchcontext.xml  pygio-asyncresult.xml  pygio-bufferedinputstream.xml  pygio-bufferedoutputstream.xml  pygio-cancellable.xml  pygio-classes.xml  pygio-constants.xml  pygio-datainputstream.xml  pygio-dataoutputstream.xml  pygio-drive.xml  pygio-emblem.xml  pygio-emblemedicon.xml  pygio-file.xml  pygio-fileattributeinfo.xml  pygio-fileenumerator.xml  pygio-fileicon.xml  pygio-fileinfo.xml  pygio-fileinputstream.xml  pygio-filemonitor.xml  pygio-fileoutputstream.xml  pygio-filterinputstream.xml  pygio-filteroutputstream.xml  pygio-functions.xml  pygio-icon.xml  pygio-inputstream.xml  pygio-loadableicon.xml  pygio-memoryinputstream.xml  pygio-memoryoutputstream.xml  pygio-mount.xml  pygio-mountoperation.xml  pygio-outputstream.xml  pygio-seekable.xml  pygio-simpleasyncresult.xml  pygio-themedicon.xml  pygio-unixinputstream.xml  pygio-unixoutputstream.xml  (+16 more)
docs/tutorials/: conf.py  gio.rst  glib.rst  gobject.rst  gtk3.rst  gtk4.rst  index.rst  libadwaita.rst  pygobject.rst
docs/xsl/: .cvsignore  common.xsl  fixxref.py.in  html.xsl  ref-html-style.xsl
gi/: HACKING  Makefile.am  __init__.py  _compat.py  _constants.py  _debug.py  _enum.py  _error.py  _gi.py  _gi.pyi  _gtktemplate.py  _option.py  _ossighelper.py  _propertyhelper.py  _signalhelper.py  _signature.py  docstring.py  events.py  gimodule.c  gimodule.h  glibmodule.c  gobjectmodule.c  gobjectmodule.h  importer.py  llvm-compiler.cpp  llvm-compiler.h  meson.build  module.py  pygargument.c  pygargument.h  pygboxed.c  pygboxed.h  pygenum.c  pygenum.h  pygflags.c  pygflags.h  pygi-argument.c  pygi-argument.h  pygi-array.c  pygi-array.h  (+135 more)
gi/_glib/: Makefile.am  __init__.py  glibmodule.c  option.py  pygiochannel.c  pyglib-python-compat.h  pyglib.c  pyglib.h  pygmaincontext.c  pygmainloop.c  pygmainloop.h  pygoptioncontext.c  pygsource.c  pygsource.h  pygspawn.c  pygspawn.h
gi/_gobject/: Makefile.am  __init__.py  constants.py  ffi-marshaller.c  gobjectmodule.c  propertyhelper.py  pygboxed.c  pygenum.c  pygflags.c  pyginterface.c  (+8 more)
girepository/: Makefile.am  __init__.py  bank-argument.c  bank-info.c  bank-repository.c  bank.c  bank.h  btypes.py  importer.py  module.py  repository.py
glib/: Makefile.am  __init__.py  glibmodule.c  option.py  pygiochannel.c  pygiochannel.h  pyglib-private.h  pyglib-python-compat.h  pyglib.c  pyglib.h  pygmaincontext.c  pygmaincontext.h  pygmainloop.c  pygoptioncontext.c  pygoptioncontext.h  pygoptiongroup.c  pygoptiongroup.h  pygsource.c  pygsource.h  pygspawn.c  pygspawn.h
gobject/: .cvsignore  .gitignore  Makefile.am  __init__.py  constants.py  constants.py.in  ffi-marshaller.h  generate-constants.c  gobjectmodule.c  makefile.msc  option.py  propertyhelper.py  pygboxed.c  pygboxed.h  pygenum.c  pygenum.h  pygflags.c  pygflags.h  pygi-external.h  pygiargument.c  pygifunction.c  pyginterface.c  pyginterface.h  pygiochannel.c  pygmaincontext.c  pygmainloop.c  pygobject-private.h  pygobject.c  pygobject.h  pygoptioncontext.c  pygoptiongroup.c  pygparamspec.c  pygpointer.c  pygsource.c  pygtype.c
pygtkcompat/: Makefile.am  __init__.py  generictreemodel.py  meson.build  pygtkcompat.py
tests/: .gitignore  Makefile.am  __init__.py  annotation.c  annotation.h  common.py  compat_test_pygtk.py  compathelper.py  conftest.py  conversion.py  enum.py  gimarshallingtests.c  gimarshallingtests.h  gimarshallingtestsextra.c  gimarshallingtestsextra.h  gtype.py  helper.py  libtestgi.c  libtestgi.h  meson.build  org.gnome.test.gschema.xml  python.supp  python3.supp  regress.c  regress.h  regressextra.c  regressextra.h  runtests-windows.py  runtests.py  signal.py  te_ST@nouppera  test-floating.c  test-floating.h  test-thread.c  test-thread.h  test-unknown.c  test-unknown.h  test_actiongroup.py  test_async.py  test_atoms.py  (+66 more)
win32/: Makefile.am  Makefile.vc  README.txt  build-rules-msvc.mak  config-msvc.mak  configpy.py  create-lists-msvc.mak  detectenv-msvc.mak  generate-msvc.mak  info-msvc.mak  install.mak  pygobject-version.mak.in  pygobjectpc.py  pythonconfig.mak
(+284 files in other folders)
